Add island creation and deletion exception handling, update MySQL database configuration, and remove debug logs